2012-08-29  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14476]
	* Makefile (install): Also pass LD_SO=$(ld.so-version) to
	scripts/test-installation.pl.
	* scripts/test-installation.pl: Use LD_SO to get $ld_so_name
	and $ld_so_version if it is set.

2012-09-25  Alan Modra  <amodra@gmail.com>

	* sysdeps/unix/sysv/linux/powerpc/pthread_once.c (__pthread_once):
	Add release barrier before setting once_control to say
	initialisation is done.  Add hints on lwarx.  Use macro in
	place of isync.
	(clear_once_control): Add release barrier.

2012-07-03  Joseph Myers  <joseph@codesourcery.com>

	* Makeconfig [!+link] (+link-before-libc): New variable.
	[!+link] (+link-after-libc): Likewise.
	[!+link] (+link-tests): Likewise.
	[!+link] (+link): Define in terms of $(+link-before-libc) and
	$(+link-after-libc).
	[!+link-static] (+link-static-before-libc): New variable.
	[!+link-static] (+link-static-after-libc): Likewise.
	[!+link-static] (+link-static-tests): Likewise.
	[!+link-static] (+link-static): Define in terms of
	$(+link-static-before-libc) and $(+link-static-after-libc).
	[build-shared] (link-libc-before-gnulib): New variable.
	[build-shared] (link-libc-tests): Likewise.
	[build-shared] (link-libc): Define in terms of
	$(link-libc-before-gnulib).
	[!build-shared] (link-libc-tests): New variable.
	(link-libc-static-tests): New variable.
	[!gnulib] (gnulib-arch): New variable.
	[!gnulib] (gnulib-tests): Likewise.
	[!gnulib] (static-gnulib-arch): Likewise.
	[!gnulib] (static-gnulib-tests): Likewise.
	[!gnulib] (gnulib): Use $(gnulib-arch).  Do not use $(libgcc_eh).
	Define with "=" instead of ":=".
	[!gnulib] (static-gnulib): Use $(static-gnulib-arch).  Do not use
	-lgcc_eh $(libunwind).  Define with "=" instead of ":=".
	* Rules (binaries-all-notests): New variable.
	(binaries-all-tests): Likewise.
	(binaries-static-notests): Likewise.
	(binaries-static-tests): Likewise.
	(binaries-all): Define using $(binaries-all-notests) and
	$(binaries-all-tests).