@@ -1,3 +1,8 @@
+2012-08-23  Steve McIntyre  <steve.mcintyre@linaro.org>
+
+	* elf/elf.h (EF_ARM_ABI_FLOAT_SOFT): New macro.
+	(EF_ARM_ABI_FLOAT_HARD): Likewise.
+
 2012-08-29  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #14476]
